--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -43,7 +43,7 @@
                 
       <h1>Drink Search 🍹</h1>
       <div class="container">
-        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim 
+        Type in any drinkto see information or click Random Drink
       </div>
 
       <form id="drink-form">
@@ -64,6 +64,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../scripts/drinks.js"></script>
+    <script src="../scripts/drinks.js" type="module"></script>
     </body>
 </html>
