--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,9 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/materialize.css">
     <link rel="stylesheet" href="../styles/materialize.min.css">
-
-    
-    <title>Document</title>
+    <title>The Eating Hour</title>
 </head>
 <body>
     <div class="parallax"> <div id="header"><h1>Good Eats</h1><br><br><p id="smallerText">A user responsive website that produces an array of food and drink information and recipies...</p>
