--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
     <title>The Eating Hour</title>
 </head>
 <body>
-    <div class="parallax"> <div id="header"><h1>Good Eats</h1><br><br><p id="smallerText">A user responsive website that produces an array of food and drink information and recipies...</p>
+    <div class="parallax"> <div id="header"><h1>The Eating Hour</h1><br><br><p id="smallerText">A user responsive website that produces an array of food and drink information and recipies...</p>
         </div></div>
                 <div class="parallax"> <div id="options"><p>Select <a href="food.html"class="waves-effect waves-light btn-large">Food</a> OR <a href="drinks.html"class="waves-effect waves-light btn-large">Drinks</a> to get started!
                 </div></div>
