--- a/src/styles/foodStyle.css
+++ b/src/styles/foodStyle.css
@@ -34,6 +34,11 @@
     padding: 0 20px;
     text-align: center;
   }
-
+  #background {
+    background-image: url("../assests/image3.jpg");');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+  }
   /* css test */
   
