--- a/src/templates/food.html
+++ b/src/templates/food.html
@@ -21,6 +21,7 @@
   </head>
 
   <body>
+    <div id="background">
     <div id="page-wrap">
     <nav>
     <div class="nav-wrapper">
@@ -54,7 +55,8 @@
         <label for="food-input">Search for a Food</label>
         <input type="text" id="food-input" placeholder="Enter Food Here" />
         <br />
-
+      </div>
+      
         <!-- Button triggers new movie to be added -->
         <input class='button' id="add-food" type="submit" value="Get info" />
         <button class='button' id="random-food">Random Food</button>
