added nav and about me

--- a/src/templates/aboutUs.html
+++ b/src/templates/aboutUs.html
@@ -15,9 +15,50 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
     <title>About Us</title>
   </head>
   <body>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo center">The Eating Hour</a>
+        <ul class="left hide-on-med-and-down">
+          <li><a href="food.html">Food</a></li>
+          <li><a href="drinks.html">Drinks</a></li>
+          <li class="active"><a href="aboutUs.html">About Us</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="row">
+      <div class="col s12">
+        <h1>About Us</h1>
+      </div>
+      <div class="col s8">
+        <div class="row">
+          <div class="col s12 m7">
+            <div class="card">
+              <div class="card-image">
+                <img src="C:\Users\harol\Pictures\coworking 2.jpg">
+                <span class="card-title">Card Title</span>
+              </div>
+              <div class="card-content">
+                <p>Student dev team from North Carolina with a pasion for great eatery.
+                </p>
+                <p>Check us out below! </p>
+              </div>
+              <div class="card-action">
+                <a href="https://github.com/Hparada007"target="_blank" rel="noopener">Aro Parada</a>
+                <a href="https://github.com/mcereal"target="_blank" rel="noopener">Micheal Curtis</a>
+                <a href="https://github.com/CaseyOverton"target="_blank" rel="noopener">Casey Overton</a>
+                <p>
+                <a href="https://github.com/nihalwill"target="_blank" rel="noopener">Nihal Williams</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>      
+      </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
