--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -21,17 +21,16 @@
 
   <body>
     <div id="page-wrap">
-    <nav>
-    <div class="nav-wrapper">
-      <a href="drinks.html" class="brand-logo">Logo</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="aboutUs.html">About Us</a></li>
-        <li><a href="badges.html">Components</a></li>
-      </ul>
-    </div>
-  </nav>
-
+      <nav>
+        <div class="nav-wrapper">
+          <a href="index.html" class="brand-logo center">The Eating Hour</a>
+          <ul class="left hide-on-med-and-down">
+            <li><a href="food.html">Food</a></li>
+            <li class="active"><a href="drinks.html">Drinks</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
+          </ul>
+        </div>
+      </nav>
   <ul class="sidenav" id="mobile-demo">
     <li><a href="sass.html">Sass</a></li>
     <li><a href="badges.html">Components</a></li>
@@ -43,7 +42,7 @@
                 
       <h1>Drink Search 🍹</h1>
       <div class="container">
-        Type in any drinkto see information or click Random Drink
+        Type in any drink to see information or click Random Drink
       </div>
 
       <form id="drink-form">
@@ -56,7 +55,6 @@
         <input class='button' id="add-drinks" type="submit" value="Get info" />
         <button class='button' id="random-drinks">Random drinks</button>
         <button  class='button'id="clear-drinks">Clear drinks</button>
-        <a href="index.html" class="btn btn-outline-success" role="button" aria-pressed="true">Next 🡆</a> 
       </form>
 
       <div id="drinks-view"></div>
