--- a/src/templates/food.html
+++ b/src/templates/food.html
@@ -24,7 +24,7 @@
     <div id="page-wrap">
       <nav>
         <div class="nav-wrapper">
-          <a href="index.html" class="brand-logo center">The Eating Hour</a>
+          <a href="../../index.html" class="brand-logo center">The Eating Hour</a>
           <ul class="left hide-on-med-and-down">
             <li class="active"><a href="food.html">Food</a></li>
             <li><a href="drinks.html">Drinks</a></li>
