--- a/src/templates/aboutUs.html
+++ b/src/templates/aboutUs.html
@@ -21,7 +21,7 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo center">The Eating Hour</a>
+        <a href="../../index.html" class="brand-logo center">The Eating Hour</a>
         <ul class="left hide-on-med-and-down">
           <li><a href="food.html">Food</a></li>
           <li><a href="drinks.html">Drinks</a></li>
