image on drinks page

--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -20,6 +20,7 @@
   </head>
 
   <body>
+    <div id="background">
     <div id="page-wrap">
     <nav>
     <div class="nav-wrapper">
@@ -50,6 +51,8 @@
         <label for="drink-input">Search for a Drink</label>
         <input type="text" id="drinks-input" placeholder="Enter Drink Here" />
         <br />
+      </div>
+
 
         <!-- Button triggers new drink to be added -->
         <a href="food.html" class="btn btn-outline-success" role="button" aria-pressed="true">🡄 Back</a> 
