--- a/src/templates/aboutUs.html
+++ b/src/templates/aboutUs.html
@@ -38,7 +38,7 @@
           <div class="col s12 m7">
             <div class="card">
               <div class="card-image">
-                <img src="C:\Users\harol\Pictures\coworking 2.jpg">
+                <img src="../assests/coworking2.jpg">
                 <span class="card-title">Card Title</span>
               </div>
               <div class="card-content">
