removed text in image

--- a/src/templates/aboutUs.html
+++ b/src/templates/aboutUs.html
@@ -39,7 +39,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="../assests/coworking2.jpg">
-                <span class="card-title">Card Title</span>
+                <span class="card-title"></span>
               </div>
               <div class="card-content">
                 <p>Student dev team from North Carolina with a pasion for great eatery.
