--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -1,6 +1,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Search Food and Drinks</title>
     <style type="text/css">
       button,
@@ -10,21 +12,35 @@
         margin: 10px;
       }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="../styles/skeleton.css">
-    <link rel="stylesheet" href="../styles/skeleton.css">
-    <link rel="stylesheet" href="../styles/foodStyle.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/materialize.css">
-    <link rel="stylesheet" href="../styles/materialize.min.css">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="../styles/skeleton.css" />
+    <link rel="stylesheet" href="../styles/skeleton.css" />
+    <link rel="stylesheet" href="../styles/foodStyle.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles/materialize.css" />
+    <link rel="stylesheet" href="../styles/materialize.min.css" />
   </head>
 
-  <body>
-    <div id="background">
+  <body id="background">
     <div id="page-wrap">
       <nav>
         <div class="nav-wrapper">
-          <a href="../../index.html" class="brand-logo center">The Eating Hour</a>
+          <a href="../../index.html" class="brand-logo center"
+            >The Eating Hour</a
+          >
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
           <ul class="left hide-on-med-and-down">
             <li><a href="food.html">Food</a></li>
             <li class="active"><a href="drinks.html">Drinks</a></li>
@@ -32,40 +48,49 @@
           </ul>
         </div>
       </nav>
-  <ul class="sidenav" id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
-    <li><a href="collapsible.html">Javascript</a></li>
-    <li><a href="mobile.html">Mobile</a></li>
-  </ul>
-          
-      </div>
-                
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="food.html">Food</a></li>
+        <li class="active"><a href="drinks.html">Drinks</a></li>
+        <li><a href="aboutUs.html">About Us</a></li>
+      </ul>
+    </div>
+
+    <main class="container-fluid">
       <h1>Drink Search 🍹</h1>
       <div class="container">
         Type in any drink to see information or click Random Drink
       </div>
 
-    
-      <form id="drink-form">
-        <label for="drink-input">Search for a Drink</label>
-        <input type="text" id="drinks-input" placeholder="Enter Drink Here" />
-        <br />
+      <label for="drink-input">Search for a Drink</label>
+      <input type="text" id="drinks-input" placeholder="Enter Drink Here" />
+      <br />
+
+      <div id="drinkDisplay" style="background-color: white">
+        <form>
+          <!-- Button triggers new drink to be added -->
+          <div>
+            <a
+              href="food.html"
+              class="btn btn-outline-success"
+              role="button"
+              aria-pressed="true"
+              >🡄 Back</a
+            >
+            <input
+              class="button"
+              id="add-drinks"
+              type="submit"
+              value="Get info"
+            />
+            <button class="button" id="random-drinks">Random drinks</button>
+            <button class="button" id="clear-drinks">Clear drinks</button>
+          </div>
+          <div style="background-color: white" id="drinks-view"></div>
+        </form>
       </div>
-
-
-        <!-- Button triggers new drink to be added -->
-        <a href="food.html" class="btn btn-outline-success" role="button" aria-pressed="true">🡄 Back</a> 
-        <input class='button' id="add-drinks" type="submit" value="Get info" />
-        <button class='button' id="random-drinks">Random drinks</button>
-        <button  class='button'id="clear-drinks">Clear drinks</button>
-      </form>
-
-      <div id="drinks-view"></div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../scripts/drinks.js" type="module"></script>
-    </body>
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
+    <script src="../scripts/drinks.js" type="text/javascript"></script>
+  </body>
 </html>
