--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -32,28 +32,26 @@
   </head>
 
   <body id="background">
-    <div id="page-wrap">
-      <nav>
-        <div class="nav-wrapper">
-          <a href="../../index.html" class="brand-logo center"
-            >The Eating Hour</a
-          >
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-            ><i class="material-icons">menu</i></a
-          >
-          <ul class="left hide-on-med-and-down">
-            <li><a href="food.html">Food</a></li>
-            <li class="active"><a href="drinks.html">Drinks</a></li>
-            <li><a href="aboutUs.html">About Us</a></li>
-          </ul>
-        </div>
-      </nav>
+    <!-- <div id="page-wrap"> -->
+    <nav>
+      <div class="nav-wrapper">
+        <a href="../../index.html" class="brand-logo center">The Eating Hour</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+        <ul class="left hide-on-med-and-down">
+          <li><a href="food.html">Food</a></li>
+          <li class="active"><a href="drinks.html">Drinks</a></li>
+          <li><a href="aboutUs.html">About Us</a></li>
+        </ul>
+      </div>
       <ul class="sidenav" id="mobile-demo">
         <li><a href="food.html">Food</a></li>
         <li class="active"><a href="drinks.html">Drinks</a></li>
         <li><a href="aboutUs.html">About Us</a></li>
       </ul>
-    </div>
+    </nav>
+    <!-- </div> -->
 
     <main class="container-fluid">
       <h1>Drink Search 🍹</h1>
