--- a/src/templates/aboutUs.html
+++ b/src/templates/aboutUs.html
@@ -11,11 +11,10 @@
     <link rel="stylesheet" href="../src/normalize.css" />
     <link rel="stylesheet" href="../src/skeleton.css" />
     <link rel="stylesheet" href="foodStyle.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
-      rel="stylesheet"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <style>
+      body {font-family: 'Shadows Into Light', cursive;}
+    </style>
     <title>About Us</title>
   </head>
   <body>
