Target_blank working with links, added icons to tabs, spelling errors fixed

--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -29,6 +29,7 @@
     />
     <link rel="stylesheet" href="../styles/materialize.css" />
     <link rel="stylesheet" href="../styles/materialize.min.css" />
+    <link rel="shortcut icon" href="../assests/glass.ico" type="image/x-icon" />
   </head>
 
   <body id="background">
