--- a/src/templates/aboutUs.html
+++ b/src/templates/aboutUs.html
@@ -11,9 +11,15 @@
     <link rel="stylesheet" href="../src/normalize.css" />
     <link rel="stylesheet" href="../src/skeleton.css" />
     <link rel="stylesheet" href="foodStyle.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../assests/main.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      body {font-family: 'Shadows Into Light', cursive;}
+      body {
+        font-family: "Shadows Into Light", cursive;
+      }
     </style>
     <title>About Us</title>
   </head>
@@ -37,25 +43,47 @@
           <div class="col s12 m7">
             <div class="card">
               <div class="card-image">
-                <img src="../assests/coworking2.jpg">
+                <img src="../assests/coworking2.jpg" />
                 <span class="card-title"></span>
               </div>
               <div class="card-content">
-                <p>Student dev team from North Carolina with a pasion for great eatery.
+                <p>
+                  Student dev team from North Carolina with a passion for great
+                  eatery.
                 </p>
-                <p>Check us out below! </p>
+                <p>Check us out below!</p>
               </div>
               <div class="card-action">
-                <a href="https://github.com/Hparada007"target="_blank" rel="noopener">Aro Parada</a>
-                <a href="https://github.com/mcereal"target="_blank" rel="noopener">Micheal Curtis</a>
-                <a href="https://github.com/CaseyOverton"target="_blank" rel="noopener">Casey Overton</a>
+                <a
+                  href="https://github.com/Hparada007"
+                  target="_blank"
+                  rel="noopener"
+                  >Aro Parada</a
+                >
+                <a
+                  href="https://github.com/mcereal"
+                  target="_blank"
+                  rel="noopener"
+                  >Michael Curtis</a
+                >
+                <a
+                  href="https://github.com/CaseyOverton"
+                  target="_blank"
+                  rel="noopener"
+                  >Casey Overton</a
+                >
                 <p>
-                <a href="https://github.com/nihalwill"target="_blank" rel="noopener">Nihal Williams</a>
+                  <a
+                    href="https://github.com/nihalwill"
+                    target="_blank"
+                    rel="noopener"
+                    >Nihal Williams</a
+                  >
                 </p>
               </div>
             </div>
           </div>
-        </div>      
+        </div>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
