--- a/src/templates/food.html
+++ b/src/templates/food.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/materialize.css">
     <link rel="stylesheet" href="../styles/materialize.min.css">
+    <link rel="shortcut icon" href="../assests/plate.ico" type="image/x-icon">
   </head>
 
   <body>
