--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -28,13 +28,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles/materialize.css" />
-    <link rel="stylesheet" href="../styles/materialize.min.css" />
   </head>
 
-  <body id="background">
+  <body>
     <!-- <div id="page-wrap"> -->
+    <div id="background">
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper clearfix">
         <a href="../../index.html" class="brand-logo center">The Eating Hour</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"
           ><i class="material-icons">menu</i></a
@@ -62,6 +62,7 @@
       <label for="drink-input">Search for a Drink</label>
       <input type="text" id="drinks-input" placeholder="Enter Drink Here" />
       <br />
+    </div>
 
       <div id="drinkDisplay" style="background-color: white">
         <form>
