--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -21,7 +21,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
     <link rel="stylesheet" href="../styles/skeleton.css" />
-    <link rel="stylesheet" href="../styles/skeleton.css" />
     <link rel="stylesheet" href="../styles/foodStyle.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
@@ -84,7 +83,7 @@
             <button class="button" id="random-drinks">Random drinks</button>
             <button class="button" id="clear-drinks">Clear drinks</button>
           </div>
-          <div style="background-color: white" id="drinks-view"></div>
+          <div id="drinks-view"></div>
         </form>
       </div>
     </main>
