added fonts to all pages and made big

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,7 @@
 
 * {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Shadows Into Light", cursive;
+  font-size: large;
   color: whitesmoke;
   text-shadow: black
   
