--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -28,7 +28,15 @@
     />
     <link rel="stylesheet" href="../styles/materialize.css" />
   </head>
-
+  <link
+  href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
+  rel="stylesheet"
+  />
+  <style>
+    body {
+      font-family: "Shadows Into Light", cursive;
+    }
+  </style>
   <body>
     <!-- <div id="page-wrap"> -->
     <div id="background">
