--- a/src/templates/food.html
+++ b/src/templates/food.html
@@ -21,7 +21,10 @@
     <link rel="stylesheet" href="../styles/foodStyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/materialize.css">
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
