--- a/src/templates/aboutUs.html
+++ b/src/templates/aboutUs.html
@@ -36,14 +36,14 @@
         >
         <ul class="left hide-on-med-and-down">
           <li><a href="food.html">Food</a></li>
-          <li class="active"><a href="drinks.html">Drinks</a></li>
-          <li><a href="aboutUs.html">About Us</a></li>
+          <li><a href="drinks.html">Drinks</a></li>
+          <li class="active"><a href="aboutUs.html">About Us</a></li>
         </ul>
       </div>
       <ul class="sidenav" id="mobile-demo">
         <li><a href="food.html">Food</a></li>
-        <li class="active"><a href="drinks.html">Drinks</a></li>
-        <li><a href="aboutUs.html">About Us</a></li>
+        <li><a href="drinks.html">Drinks</a></li>
+        <li class="active"><a href="aboutUs.html">About Us</a></li>
       </ul>
     </nav>
     <div class="row">
