--- a/src/templates/food.html
+++ b/src/templates/food.html
@@ -74,6 +74,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
+    <script src="../scripts/food.js" type="text/javascript"></script>
     <script src="../scripts/drinks.js" type="text/javascript"></script>
     </body>
 </html>
