responsive image layout

--- a/src/templates/drinks.html
+++ b/src/templates/drinks.html
@@ -91,7 +91,12 @@
             <button class="button" id="random-drinks">Random drinks</button>
             <button class="button" id="clear-drinks">Clear drinks</button>
           </div>
-          <div id="drinks-view"></div>
+          <div id="drinkContentView" class="row">
+            <div id="imageTitleView" class="col s12 m6 l6"></div>
+            <div id="drinks-view" class="col s12 m6 l6"></div>
+          </div>
+          <!-- <div id="imageTitleView"></div>
+          <div id="drinks-view"></div> -->
         </form>
       </div>
     </main>
