--- a/src/styles/foodStyle.css
+++ b/src/styles/foodStyle.css
@@ -44,8 +44,19 @@
   height: auto;
 }
 
+#drinkContentView {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: left;
+}
+
 @media only screen and (max-width: 470px) {
   nav .brand-logo {
     white-space: nowrap;
+  }
+  #drinkContentView {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
   }
 }
